set up the project

--- a/src/styles/resources/mixins.scss
+++ b/src/styles/resources/mixins.scss
@@ -7,7 +7,7 @@
   }
 
   
-  @mixin list ($g: 30px, $fd, $fw) {
+  @mixin wrap ($g: 30px, $fd, $fw) {
     display: flex;
     gap: $g;
     flex-direction: $fd;
