--- a/src/styles/resources/variables.scss
+++ b/src/styles/resources/variables.scss
@@ -7,11 +7,16 @@ $light-green:#E0E1D9;
 $bg-color: #F6F6F4;
 
 /* -- Typography -- */
-$main-font-family: 'Montserrat Alternates', sans-serif;
+$main-font-family: 'Montserrat', sans-serif;
 $secondary-font-family: 'Lobster', cursive;
 $font-size: 20px;
 $font-weight: 400;
 $font-color: $black;
+
+/* -- Transition -- */
+$transition-property: all;
+$transition-delay: .2s;
+$transition-timing: ease;
 
 
 /* -- Media Query Breakpoints -- */
