create section offer

--- a/src/styles/resources/variables.scss
+++ b/src/styles/resources/variables.scss
@@ -7,7 +7,7 @@ $light-green:#E0E1D9;
 $bg-color: #F6F6F4;
 
 /* -- Typography -- */
-$main-font-family: 'Montserrat', sans-serif;
+$main-font-family: 'Montserrat Alternates', sans-serif;
 $secondary-font-family: 'Lobster', cursive;
 $font-size: 20px;
 $font-weight: 400;
