--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -8,4 +8,8 @@
     border-top: 1px solid $black;
     font-size: 16px;
     opacity: 0.7;
+
+    @include phablet {
+        @include wrap (20px, row, wrap);
+    }
 }
